WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262702
AX: Missing type in AXIsolatedObject::setProperty.
https://bugs.webkit.org/show_bug.cgi?id=262702
Summary
AX: Missing type in AXIsolatedObject::setProperty.
Andres Gonzalez
Reported
2023-10-05 08:18:39 PDT
.
Attachments
Patch
(1.52 KB, patch)
2023-10-05 08:32 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-05 08:18:47 PDT
<
rdar://problem/116524008
>
Andres Gonzalez
Comment 2
2023-10-05 08:32:23 PDT
Created
attachment 468074
[details]
Patch
EWS
Comment 3
2023-10-05 10:30:34 PDT
Committed
268924@main
(0c63edf7c0de): <
https://commits.webkit.org/268924@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 468074
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug