AX: Missing type in AXIsolatedObject::setProperty. https://bugs.webkit.org/show_bug.cgi?id=262702 <rdar://problem/116524008>

Reviewed by Tyler Wilcock.

This causes a crash assert in debug builds. Adding the IntRect missing type to the switchOn call.

* Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::setProperty):

Canonical link: https://commits.webkit.org/268924@main